2003-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:           Update of TEA spec to (hopefully) simplify
	* configure.in:        some aspects of TEA by making use of more
	* Makefile.in:         AC 2.5x features.  Use PACKAGE_NAME (instead
	* generic/tclsample.c: of PACKAGE) and PACKAGE_VERSION (instead of
	* tclconfig/tcl.m4:    VERSION) arguments to AC_INIT as the TEA
	package name and version.
	Provide a version argument to TEA_INIT - starting with 3.0.
	Drop all use of interior shell substs that older makefiles didn't
	like.  Use PKG_* naming convention instead.
	Move specification of source files and public headers into
	configure.in with TEA_ADD_SOURCES and TEA_ADD_HEADERS.  These will
	be munged during ./configure into the right obj file names (no
	$(SOURCES:.c=.obj) needed).
	There is almost nothing that should be touched in Makefile.in now
	for the developer.  May want to add a TEA_ADD_TCL_SOURCES for the
	RUNTIME_SOURCES that remains.
	Use SHLID_LD_FLAGS (instead of SHLID_LDFLAGS) as Tcl does.
	Only specify the user requested LDFLAGS/CFLAGS in the Makefile,
	don't mention the _OPTIMIZE/_DEBUG variants.

	* generic/sample.h: remove outdated ANSI_ARGS usage

2003-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	**** tagged sampleextension-0-4 ****

2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regened with autoconf 2.5x tcl.m4

	* Makefile.in (CFLAGS_WARNING): added to base makefile

2003-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tea.pdf:         Set to binary so it downloads properly under Win32
	
	* win/rules.vc:    Fixed nmakehlp to find the correct Tcl or Tk
	* win/nmakehlp.c:  version from the tcl.h header file. This will
	* win/makefile.vc  then pick up the right libraries.

2003-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* README:           Added notes for the win/ build files.
	
	* win/Makefile.vc:  Patch #762878 applied to provide a sample VC++