@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.34 2003/12/03 08:15:26 hobbs Exp $
+# RCS: @(#) $Id: configure.in,v 1.35 2003/12/06 01:17:06 hobbs Exp $
 
 #-----------------------------------------------------------------------
 # Sample configure.in for Tcl Extensions.  The only places you should
@@ -63,12 +63,18 @@ TEA_SETUP_COMPILER
 
 #-----------------------------------------------------------------------
 # __CHANGE__
-# Specify the source files to compile and public headers that need to be
-# installed.  This defines PKG_SOURCES, PKG_OBJECTS and PKG_HEADERS.
+# Specify the C source files to compile in TEA_ADD_SOURCES,
+# public headers that need to be installed in TEA_ADD_HEADERS,
+# stub library C source files to compile in TEA_ADD_STUB_SOURCES,
+# and runtime Tcl library files in TEA_ADD_TCL_SOURCES.
+# This defines PKG(_STUB)_SOURCES, PKG(_STUB)_OBJECTS, PKG_HEADERS
+# and PKG_TCL_SOURCES.
 #-----------------------------------------------------------------------
 
-TEA_ADD_SOURCES([generic/sample.c generic/tclsample.c])
-TEA_ADD_HEADERS([generic/sample.h])
+TEA_ADD_SOURCES([sample.c tclsample.c])
+TEA_ADD_HEADERS([])
+TEA_ADD_STUB_SOURCES([])
+TEA_ADD_TCL_SOURCES([])
 
 #--------------------------------------------------------------------
 # __CHANGE__
